--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="container">
     <h2>Ask a Question</h2>
     <input type="text" id="question" placeholder="Type your homework question here...">
-    <button onclick="searchWeb()">Search the Web</button>
+    <button onclick="searchWeb()">Get Answer</button>
 
     <div class="response" id="response" style="display: none;"></div>
 </div>
@@ -68,17 +68,35 @@
 <script>
     function searchWeb() {
         const question = document.getElementById('question').value;
+        const responseDiv = document.getElementById('response');
 
         if (question.trim() === "") {
-            alert("Please enter a question!");
+            responseDiv.textContent = "Please enter a question!";
+            responseDiv.style.display = 'block';
             return;
         }
 
-        // Open a new search tab with the query
-        const searchUrl = `https://www.google.com/search?q=${encodeURIComponent(question)}`;
-        window.open(searchUrl, '_blank');
+        // Use DuckDuckGo's "api" for instant answers
+        const searchUrl = `https://api.duckduckgo.com/?q=${encodeURIComponent(question)}&format=json&no_redirect=1&no_html=1&skip_disambig=1`;
+
+        fetch(searchUrl)
+            .then(response => response.json())
+            .then(data => {
+                if (data.Abstract) {
+                    responseDiv.innerHTML = `<strong>Answer:</strong> ${data.Abstract}`;
+                } else {
+                    responseDiv.innerHTML = "No answer found. Try searching online!";
+                }
+                responseDiv.style.display = 'block';
+            })
+            .catch(error => {
+                responseDiv.textContent = "Error fetching the answer. Please try again.";
+                responseDiv.style.display = 'block';
+                console.error('Fetch error:', error);
+            });
     }
 </script>
 
 </body>
 </html>
+
